// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Item Bank default 1`] = `
<div
  className="site-body"
  id="site-body"
>
  <header
    role="navigation"
  >
    <div
      id="skip-main"
    >
      <a
        className="skip-link"
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        Skip to main content
      </a>
    </div>
    <nav
      className="nav-container"
      role="navigation"
    >
      <div
        className="nav-content container"
      >
        <div
          className="nav-titleGroup"
        >
          <div
            className="nav-titleGroup-item"
          >
            <a
              href="http://www.smarterbalanced.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="Smarter Balanced Home"
            >
              <img
                alt="Smarter Balanced Logo"
                src="test-file-stub"
              />
            </a>
          </div>
          <div
            className="nav-titleGroup-item"
          >
            <h1
              className="application-title"
            >
              Item Bank
            </h1>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <main
    className="site-content"
    id="main"
    role="main"
  >
    <div
      className="item-container container"
    >
      <div>
        <div
          className="section revisions-items"
        >
          <div
            className="revisions section section-light section-compact"
          >
            <h3
              className="revisions-header"
            >
              Revisions
            </h3>
            <ul />
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions"
            className="section item-map-iframe"
          >
            <div
              aria-label="Toolbar with button groups"
              className="item-nav"
              role="toolbar"
            >
              <div
                aria-label="First group"
                className="item-nav-left-group"
                role="group"
              />
              <div
                className="nav-buttons"
              >
                <button
                  className="btn btn-link previous"
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    className="nav-button-container"
                  >
                    <span
                      aria-hidden="true"
                      className="fa fa-arrow-left"
                    />
                    <div
                      className="nav-item-name"
                    >
                      Previous
                    </div>
                  </div>
                </button>
                <div
                  className="select-dd"
                >
                  <label>
                    <span
                      className="display-none"
                    >
                      Items
                    </span>
                  </label>
                  <select
                    className="form-control item-dropdown"
                    disabled={undefined}
                    onChange={[Function]}
                    value="187-1111-siw"
                  >
                    <option
                      aria-selected={false}
                      disabled={true}
                      label="Select an Item"
                      value="N/A"
                    >
                      Select an Item
                    </option>
                    <option
                      aria-selected={true}
                      disabled={undefined}
                      label="187-1111"
                      value="187-1111-siw"
                    >
                      187-1111
                    </option>
                    <option
                      aria-selected={false}
                      disabled={undefined}
                      label="1872-2222"
                      value="1872-2222-math"
                    >
                      1872-2222
                    </option>
                    <option
                      aria-selected={false}
                      disabled={undefined}
                      label="1871-3333"
                      value="1871-3333-siw"
                    >
                      1871-3333
                    </option>
                    <option
                      aria-selected={false}
                      disabled={undefined}
                      label=""
                      value="undefined-undefined-undefined"
                    >
                      
                    </option>
                  </select>
                </div>
                <button
                  className="btn btn-link next"
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    className="nav-button-container"
                  >
                    <span
                      aria-hidden="true"
                      className="fa fa-arrow-right"
                    />
                    <div
                      className="nav-item-name"
                    >
                      Next
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-label="Second group"
                className="item-nav-right-group"
                role="group"
              />
            </div>
            <div
              className="itemViewerFrame"
              tabIndex={0}
            >
              <div
                className="loader-icon"
              >
                <div
                  className="loader"
                />
              </div>
              <iframe
                className="itemviewer-iframe"
                id="itemviewer-iframe"
                onLoad={[Function]}
                onLoadStart={[Function]}
                src="http://ivs.smarterbalanced.org/items?ids=187-3000"
                title="item viewer"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    className="footer-container"
    role="contentinfo"
  >
    <div
      className="footer-content container"
    >
      <a
        className="footer-sbLink footer-practiceTests"
        href="http://practice.smarterbalanced.org/"
      >
        Practice and training tests are available here.
      </a>
      <div
        className="footer-copyright"
      >
        <p>
          © The Regents of the University of California.
        </p>
        <a
          className="footer-sbLink"
          href="//www.smarterbalanced.org"
        >
          www.SmarterBalanced.org
        </a>
        <div>
          <div>
            <button
              aria-label="Open Website Privacy Policy Modal"
              className="btn btn-link btn-sm footer-sbLink"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Website Privacy Policy
            </button>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Item Bank default error client 1`] = `
<div
  className="site-body"
  id="site-body"
>
  <header
    role="navigation"
  >
    <div
      id="skip-main"
    >
      <a
        className="skip-link"
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        Skip to main content
      </a>
    </div>
    <nav
      className="nav-container"
      role="navigation"
    >
      <div
        className="nav-content container"
      >
        <div
          className="nav-titleGroup"
        >
          <div
            className="nav-titleGroup-item"
          >
            <a
              href="http://www.smarterbalanced.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="Smarter Balanced Home"
            >
              <img
                alt="Smarter Balanced Logo"
                src="test-file-stub"
              />
            </a>
          </div>
          <div
            className="nav-titleGroup-item"
          >
            <h1
              className="application-title"
            >
              Item Bank
            </h1>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <main
    className="site-content"
    id="main"
    role="main"
  >
    <div
      className="item-container container"
    >
      <div>
        <div
          className="section revisions-items"
        >
          <div
            className="revisions section section-light section-compact"
          >
            <h3
              className="revisions-header"
            >
              Revisions
            </h3>
            <ul />
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions"
            className="section item-map-iframe"
          >
            <div
              aria-label="Toolbar with button groups"
              className="item-nav"
              role="toolbar"
            >
              <div
                aria-label="First group"
                className="item-nav-left-group"
                role="group"
              />
              <div
                className="nav-buttons"
              >
                <button
                  className="btn btn-link previous"
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    className="nav-button-container"
                  >
                    <span
                      aria-hidden="true"
                      className="fa fa-arrow-left"
                    />
                    <div
                      className="nav-item-name"
                    >
                      Previous
                    </div>
                  </div>
                </button>
                <div
                  className="select-dd"
                >
                  <label>
                    <span
                      className="display-none"
                    >
                      Items
                    </span>
                  </label>
                  <select
                    className="form-control item-dropdown"
                    disabled={undefined}
                    onChange={[Function]}
                    value="187-1111-siw"
                  >
                    <option
                      aria-selected={false}
                      disabled={true}
                      label="Select an Item"
                      value="N/A"
                    >
                      Select an Item
                    </option>
                    <option
                      aria-selected={true}
                      disabled={undefined}
                      label="187-1111"
                      value="187-1111-siw"
                    >
                      187-1111
                    </option>
                    <option
                      aria-selected={false}
                      disabled={undefined}
                      label="1872-2222"
                      value="1872-2222-math"
                    >
                      1872-2222
                    </option>
                    <option
                      aria-selected={false}
                      disabled={undefined}
                      label=""
                      value="undefined-undefined-undefined"
                    >
                      
                    </option>
                  </select>
                </div>
                <button
                  className="btn btn-link next"
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    className="nav-button-container"
                  >
                    <span
                      aria-hidden="true"
                      className="fa fa-arrow-right"
                    />
                    <div
                      className="nav-item-name"
                    >
                      Next
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-label="Second group"
                className="item-nav-right-group"
                role="group"
              />
            </div>
            <div
              className="no-item"
            >
              <p>
                No Item Found
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    className="footer-container"
    role="contentinfo"
  >
    <div
      className="footer-content container"
    >
      <a
        className="footer-sbLink footer-practiceTests"
        href="http://practice.smarterbalanced.org/"
      >
        Practice and training tests are available here.
      </a>
      <div
        className="footer-copyright"
      >
        <p>
          © The Regents of the University of California.
        </p>
        <a
          className="footer-sbLink"
          href="//www.smarterbalanced.org"
        >
          www.SmarterBalanced.org
        </a>
        <div>
          <div>
            <button
              aria-label="Open Website Privacy Policy Modal"
              className="btn btn-link btn-sm footer-sbLink"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Website Privacy Policy
            </button>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
